--- a/.editorconfig
+++ b/.editorconfig
@@ -3,6 +3,8 @@ root = true
 [*]
 indent_style = tab
 end_of_line = lf
+insert_final_newline = true
+trim_trailing_whitespace = true
 
 [*.y{,a}ml]
 indent_size = 2
