--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -87,3 +87,9 @@ tasks:
       - task: build
         vars: { DIR: "day6" }
       - ./bin/day6{{if .DEBUG}}_dbg{{end}} {{.CLI_ARGS}}
+
+  "7":
+    cmds:
+      - task: build
+        vars: { DIR: "day7" }
+      - ./bin/day7{{if .DEBUG}}_dbg{{end}} {{.CLI_ARGS}}
